--- a/partner_firstname/views/res_partner.xml
+++ b/partner_firstname/views/res_partner.xml
@@ -10,20 +10,20 @@
         <data>
             <xpath expr="//field[@name='name']" position="attributes">
                 <attribute name="attrs">{
-                    'readonly': [('is_company', '=', False)],
-                    'required': [('is_company', '=', True)]
+                    'readonly': [('company_type', '=', 'person')],
+                    'required': [('company_type', '=', 'company')]
                 }</attribute>
             </xpath>
 
             <xpath expr="//field[@name='category_id']" position="before">
-                <group attrs="{'invisible': [('is_company', '=', True)]}">
-                    <field name="lastname" attrs=
-                        "{'required': [('firstname', '=', False),
-                                       ('is_company', '=', False)]}"/>
-                    <field name="firstname" attrs=
-                        "{'required': [('lastname', '=', False),
-                                       ('is_company', '=', False)]}"/>
-                </group>
+                <field name="lastname" attrs=
+                    "{'required': [('firstname', '=', False),
+                                   ('company_type', '=', 'person')],
+                      'invisible': [('company_type', '!=', 'person')]}"/>
+                <field name="firstname" attrs=
+                    "{'required': [('lastname', '=', False),
+                                   ('company_type', '=', 'person')],
+                      'invisible': [('company_type', '!=', 'person')]}"/>
             </xpath>
         </data>
     </field>
@@ -37,59 +37,35 @@
         <data>
             <xpath expr="//field[@name='name']" position="attributes">
                 <attribute name="attrs">{
-                    'readonly': [('is_company', '=', False)],
-                    'required': [('is_company', '=', True)]
+                    'readonly': [('company_type', '=', 'person')],
+                    'required': [('company_type', '=', 'company')]
                 }</attribute>
             </xpath>
 
-            <xpath expr="//field[@name='category_id']" position="before">
-                <group attrs="{'invisible': [('is_company', '=', True)]}">
+            <xpath expr="//field[@name='parent_id']/.." position="after">
+                <group attrs="{'invisible': [('company_type', '!=', 'person')]}" class="oe_form_field">
                     <field name="lastname" attrs=
                         "{'required': [('firstname', '=', False),
-                                       ('is_company', '=', False)]}"/>
+                                       ('company_type', '=', 'person')]}"/>
                     <field name="firstname" attrs=
                         "{'required': [('lastname', '=', False),
-                                       ('is_company', '=', False)]}"/>
+                                       ('company_type', '=', 'person')]}"/>
                 </group>
             </xpath>
 
-            <!-- Modify inner contact form of child_ids -->
-            <xpath expr="//field[@name='child_ids']/form
-                         //field[@name='category_id']"
-                   position="before">
-                <group attrs="{'invisible': [('is_company', '=', True)]}">
-                    <field name="lastname" attrs=
-                        "{'required': [('firstname', '=', False),
-                                       ('is_company', '=', False)]}"/>
-                    <field name="firstname" attrs=
-                        "{'required': [('lastname', '=', False),
-                                       ('is_company', '=', False)]}"/>
-                </group>
+            <!--[> Modify inner contact form of child_ids <]-->
+            <xpath expr="//field[@name='child_ids']/form//field[@name='name']" position="after">
+                <field name="lastname" attrs=
+                    "{'required': [('firstname', '=', False),
+                                   ('type', '=', 'contact')]}"/>
+                <field name="firstname" attrs=
+                    "{'required': [('lastname', '=', False),
+                                   ('type', '=', 'contact')]}"/>
+            </xpath>
+            <xpath expr="//field[@name='child_ids']/form//field[@name='name']" position="attributes">
+                <attribute name="readonly">True</attribute>
             </xpath>
 
-            <xpath expr="//field[@name='child_ids']/form
-                         //field[@name='category_id']"
-                   position="attributes">
-                <attribute name="style"/>
-            </xpath>
-
-            <xpath expr="//field[@name='child_ids']/form//label[@for='name']"
-                   position="before">
-                <div class="oe_edit_only">
-                    <field name="is_company"
-                           on_change="onchange_type(is_company)"/>
-                    <label for="is_company"
-                           string="Is a Company?"/>
-                </div>
-            </xpath>
-
-            <xpath expr="//field[@name='child_ids']/form//field[@name='name']"
-                   position="attributes">
-                <attribute name="attrs">{
-                    'readonly': [('is_company', '=', False)],
-                    'required': [('is_company', '=', True)]
-                }</attribute>
-            </xpath>
         </data>
   </field>
 </record>
