--- a/partner_firstname/views/res_user.xml
+++ b/partner_firstname/views/res_user.xml
@@ -3,8 +3,9 @@
 <data>
 
 <!-- Required before modifying `base.vew_users_form`.
-     https://github.com/odoo/odoo/issues/6324#issuecomment-93534579 -->
-<function model="res.groups" name="update_user_groups_view" />
+     https://github.com/odoo/odoo/issues/6324#issuecomment-93534579
+     fix it in https://github.com/odoo/odoo/commit/cf63d4d277ef1ba02ff4ebcdae8583332a1775b1-->
+<!--<function model="res.groups" name="update_user_groups_view" />-->
 
 <record id="view_users_form" model="ir.ui.view">
     <field name="name">Add firstname and surnames</field>
