--- a/partner_street_number/views/res_partner.xml
+++ b/partner_street_number/views/res_partner.xml
@@ -37,7 +37,18 @@
                 </xpath>
 
                 <xpath expr="//field[@name='child_ids']" position="attributes">
-                    <attribute name="context">{'default_parent_id': active_id, 'default_street_name': street_name, 'default_street_number': street_number, 'default_street2': street2, 'default_city': city, 'default_state_id': state_id, 'default_zip': zip, 'default_country_id': country_id, 'default_supplier': supplier, 'default_customer': customer}</attribute>
+                    <attribute name="context">{
+                        'default_parent_id': active_id,
+                        'default_street_name': street_name,
+                        'default_street_number': street_number,
+                        'default_street2': street2,
+                        'default_city': city,
+                        'default_state_id': state_id,
+                        'default_zip': zip,
+                        'default_country_id': country_id,
+                        'default_supplier': supplier,
+                        'default_customer': customer}
+                    </attribute>
                 </xpath>
 
             </field>
