--- a/partner_noncommercial/views/menu.xml
+++ b/partner_noncommercial/views/menu.xml
@@ -92,6 +92,22 @@
             <p class="oe_view_nocontent_create"
                 >Click to add item to your address book.</p></field>
     </record>
+    <record
+        id="action_window_address_tree"
+        model="ir.actions.act_window.view"
+        >
+        <field name="view_mode">tree</field>
+        <field name="act_window_id" ref="action_address_form"/>
+        <field name="view_id" ref="base.view_partner_tree"/>
+    </record>
+    <record
+        id="action_window_address_form"
+        model="ir.actions.act_window.view"
+        >
+        <field name="view_mode">form</field>
+        <field name="act_window_id" ref="action_address_form"/>
+        <field name="view_id" ref="base.view_partner_address_form"/>
+    </record>
     <menuitem
         id="menu_address_form"
         parent="menu_partner"
