--- a/partner_related_documents/views/res_partner_related_docs_view.xml
+++ b/partner_related_documents/views/res_partner_related_docs_view.xml
@@ -1,7 +1,7 @@
 <openerp>
     <data>
         <record model="ir.actions.act_window" id="res_partner_see_related_documents_act">
-            <field name="name">res_partner_see_related_documents_act</field>
+            <field name="name">Shows documents related to a partner</field>
             <field name="res_model">signature.request</field>
             <field name="view_mode">kanban, tree</field>
             <field name="view_id" ref="website_sign.signature_request_view_kanban"/>
@@ -13,7 +13,9 @@
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//div[@name='button_box']" position="inside">
-                    <button class="oe_stat_button" type="action" name="%(res_partner_see_related_documents_act)d" context="{'partner_id': active_id}" string="Documents" icon="fa-file-text" />
+                    <button class="oe_stat_button" type="action" name="%(res_partner_see_related_documents_act)d" context="{'partner_id': active_id}" icon="fa-file-text" >
+                        <field name="documents_count" string="Documents" widget="statinfo" />
+                    </button>
                 </xpath>
             </field>
         </record>
